# Blissful

./: .gitignore  CLAUDE.md  LICENSE  README.md  aider-glm.bat  docker-compose.stremio-dev.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
.github/workflows/: release.yml
apps/addon-proxy/: server.js  videasy-decrypt.js
apps/android-blissful/: AGENTS.md  DOCUMENTATION.md  app.json  metro.config.js  package.json  tsconfig.json
apps/android-blissful/design/home/: BlissfulTVHome.jsx  Icon.jsx  PosterArt.jsx  README.md  data.js  theme.js
apps/android-blissful/docs/: FEATURES.md
apps/android-blissful/patches/: expo-video+56.1.2.patch
apps/android-blissful/scripts/: build-apk.ps1  link-core.js
apps/android-blissful/src/components/: FriendAvatar.tsx  Hero.tsx  JoinPartyModal.tsx  PosterCard.tsx  ProfileMenu.tsx  Rail.tsx  Rating.tsx  ResumeModal.tsx  StreamPicker.tsx  TopBar.tsx
apps/android-blissful/src/context/: AuthContext.tsx
apps/android-blissful/src/icons/: ImdbIcon.tsx  StremioLogo.tsx  StrokeIcon.tsx
apps/android-blissful/src/lib/: accounts.ts  addons.ts  aniskip.ts  appInfo.ts  avatars.ts  colorUtils.ts  continueWatching.ts  focusBus.ts  homeRows.ts  images.ts  introdb.ts  loginStore.ts  metaResolver.ts  navigationRef.ts  storage.ts  streamPicker.ts  streamRelevance.ts  stremioLink.ts  subtitles.ts  tmdbArt.ts  traktApi.ts  traktConfig.ts  (+3 more)
apps/blissful-mvs/: AGENTS.md  README.md  WhosWatchingDesign.jfif  heroui3.md  index.html  package-lock.json  package.json  plan.md  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
apps/blissful-mvs/public/: serve.json
apps/blissful-mvs/src/: App.tsx  index.css  main.tsx
apps/blissful-shell/: .gitignore  Cargo.toml  PHASE_0_QUICKSTART.md  PREREQUISITES.md  TEST_MATRIX.md  build.rs  plan.md  rust-toolchain.toml
apps/blissful-shell/.github/workflows/: release.yml
apps/blissful-shell/installer/: README.md  blissful.wxs  build.ps1  bundle.wxs  sign.ps1  theme.wxl  theme.xml
apps/blissful-shell/resources/: blissful.rc
apps/blissful-shell/resources/vcruntime/: README.md
apps/blissful-shell/src/: main.rs  main_window.rs  phase_0a_spike.html  state.rs  streaming_server.rs  ui_server.rs  updater.rs  webview.rs
apps/blissful-shell/src/ipc/: commands.rs  mod.rs  protocol.rs
apps/blissful-shell/src/player/: mpv.rs  mpv_events.rs
apps/blissful-storage/: README.md  server.js
apps/blissful-tv-rn/: .gitignore  AGENTS.md  App.tsx  app.json  index.ts  metro.config.js  package-lock.json  package.json  tsconfig.json
apps/blissful-tv-rn/design/: README.md
apps/blissful-tv-rn/docs/: FEATURES.md
apps/blissful-tv-rn/scripts/: link-core.js
apps/blissful-tv-shell/: .gitignore  README.md  SPEC.md  package-lock.json  package.json
apps/blissful-tv-shell/android-mpv/: BlissfulMpvPlugin.kt  MpvBridge.kt  MpvSurface.kt  README.md
apps/blissful-tv-shell/docs/: BUILD-RUNBOOK.md  MANIFEST_PATCH.md  PHASE2-PLAN.md  PHASE2-SPIKE.md  PHASE3-PLAN.md  PHASE3-STATUS.md  PORT-MAP.md  TV-DEVICE-FIXES-SPEC.md  TV-DPAD-COVERAGE-PLAN.md  TV-GLASS-PLAN.md  TV-NAV-POLISH-PLAN.md  TV-REDESIGN-PLAN.md
apps/blissful-tv-shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/blissful-tv-shell/src-tauri/capabilities/: default.json
apps/blissful-tv-shell/src-tauri/icons/: icon.icns
apps/blissful-tv-shell/src-tauri/src/: bridge.rs  lib.rs  main.rs  mpv.rs  proxy.rs  updater.rs
apps/blissful-tv-shell/tools/: cdp.mjs
apps/desktop-blissful/: Cargo.toml  DOCUMENTATION.md  PHASE_0_QUICKSTART.md
apps/desktop-blissful/installer/: README.md  blissful.wxs  build.ps1  bundle.wxs  theme.wxl
apps/desktop-blissful/src/: host_relay.rs  main.rs  main_window.rs  state.rs  streaming_server.rs  tray.rs  ui_server.rs  webview.rs
apps/shared/: DOCUMENTATION.md
apps/shared/addon-proxy/: server.js  videasy-decrypt-v2.js  videasy-decrypt-v2.test.js  videasy-v2.fixture.json
apps/shared/blissful-storage/: README.md  package-lock.json  package.json  server.js
apps/web-blissful/: AGENTS.md  DOCUMENTATION.md  README.md  heroui3.md  improvement-plan.md  package-lock.json  package.json  plan.md  vite.config.ts
apps/web-blissful/src/: App.tsx  index.css
docs/: MONOREPO-MIGRATION-PLAN.md  RN-MIGRATION-PLAN.md  WATCH-PARTY-V2.md
e2e/: README.md  run.mjs
e2e/fixtures/: auth.ts  desktop.ts  media.ts
e2e/suites/: addons.web.spec.ts  auth.web.spec.ts  detail.web.spec.ts  home.web.spec.ts  player-short-url.web.spec.ts  player-tracks.desktop.spec.ts  player-videasy-fallback.web.spec.ts  player.desktop.spec.ts  player.web.spec.ts  shell-leftover.desktop.spec.ts  shell-recovery.desktop.spec.ts  shell-transcode.desktop.spec.ts  smoke.android.spec.ts  smoke.web.spec.ts  social-ws.protocol.spec.ts  social.protocol.spec.ts  social.web.spec.ts  watch-party.desktop-host.desktop.spec.ts  watch-party.guest-controls.web.spec.ts  watch-party.host-relay.desktop.spec.ts  watch-party.protocol.spec.ts  watch-party.rd-invite.web.spec.ts  watch-party.sync.desktop.spec.ts
infra/launchd/: com.budinoff.blissful-backup.plist  com.budinoff.blissful-cache-cleanup.plist  com.budinoff.blissful-transcoder.plist  com.budinoff.videasy-minter.plist  com.budinoff.videasy-resolver.plist
infra/scripts/: blissful-alert.sh  blissful-backup.sh  blissful-cache-cleanup.sh  blissful-health-monitor.sh  blissful-mac-up.sh  blissful-nas-check.sh  blissful-nas-init.sh  blissful-restore.sh  blissful-transcoder.py  blissful-web-deploy.sh  videasy-minter.py  videasy-resolver.py
scripts/: dev-android.cjs  dev.cjs  run-cargo.cjs
scripts/dev-launcher/: main.js  package-lock.json  package.json  preload.cjs
scripts/dev-launcher/lib/: manager.cjs
scripts/dev-launcher/renderer/: index.html  renderer.js  styles.css
scripts/dev-launcher/test/: android-smoke.cjs  dep-wait-smoke.cjs  desktop-smoke.cjs  killtree-smoke.cjs  lifecycle-smoke.cjs  manager-smoke.cjs
scripts/e2e/: episode-change-share.mjs  host-relay.mjs  relay-crash-repro.mjs  verify-leftover-replace.mjs  verify-renderer-recovery.mjs  verify-software-transcode.mjs  watchparty-v2.mjs  watchparty.mjs
(+518 files in other folders)
