[package]
name = "blissful-shell"
version = "0.1.0-beta.2"
edition = "2021"
description = "Blissful Desktop — Rust + WebView2 + libmpv native shell"
license-file = "../../LICENSE"
publish = false

# Windows subsystem so we don't get a console window in release builds.
# In debug builds we keep the console for logging.
[[bin]]
name = "blissful-shell"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[build-dependencies]
embed-resource = "2.5"  # bundles icon + manifest

[dependencies]
# Native Win32 window/tray/dialog handling. Same crate stremio-shell-ng uses.
# `high-dpi` is critical — without it, `nwg::set_dpi_awareness()` compiles to a
# no-op so the process runs DPI-unaware. On HiDPI/scaled displays Windows
# then desktop-scales the window, the app sees a virtualized screen at its
# initial size, and the OS maximize button silently does nothing because
# the window already "fills" the virtualized screen.
native-windows-gui = { version = "1.0", features = ["all", "high-dpi"] }
native-windows-derive = "1.0"

# WebView2 bindings — matched to stremio-shell-ng's proven setup (they ship
# this in production and it correctly composites over libmpv's render
# surface, which webview2-com 0.36 did not). Older crate, higher-level API.
webview2 = "0.1.4"
webview2-sys = "0.1.1"

# winapi 0.3 for the HWND/RECT/GetClientRect types the webview2 crate uses.
# stremio-shell-ng uses winapi directly with the same features.
winapi = { version = "0.3", features = ["windef", "winuser", "libloaderapi", "handleapi"] }

# libmpv 2.0+ Rust wrapper. Drives playback via in-process libmpv-2.dll.
libmpv2 = "5.0"
libmpv2-sys = "4.0"

# Channels for cross-thread message passing (WebView2 STA → Tokio workers).
flume = "0.11"

# Async runtime for HTTP server (ui_server.rs), stremio-runtime supervision,
# updater. NOT used for WebView2 calls — those must stay on the UI thread.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "net", "time", "sync"] }

# HTTP server for ui_server.rs (Phase 3). Hyper is the standard.
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
http-body-util = "0.1"

# HTTP client for proxy + auto-updater (Phase 3 + 6).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }

# JSON for IPC protocol.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID for correlation IDs.
uuid = { version = "1", features = ["v4"] }

# CLI parsing for `--dev`, `--logfile`, etc.
clap = { version = "4", features = ["derive"] }

# Win32 / COM bindings for the bits NWG doesn't cover. After switching to
# the `webview2` crate (which uses winapi 0.3 internally), there's no longer
# a version-skew constraint pulled in by transitive deps — we keep 0.60 for
# its API surface but could drop to whatever matches our needs.
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
] }

# Logger.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Std-lib helpers.
once_cell = "1"
anyhow = "1"
thiserror = "1"

# Zip extraction for the bundled stremio-service archive.
zip = { version = "2", default-features = false, features = ["deflate"] }

# Phase 3b UI server: URL parsing for /addon-proxy host validation and
# percent-encoding helpers for query handling.
url = "2"
urlencoding = "2"

# Phase 6 auto-updater: semver comparison against `env!("CARGO_PKG_VERSION")`.
semver = "1"

[features]
default = []
# Enables the Phase 0a hardcoded-HTML spike. Pass --features spike0a to cargo
# run for the architecture proof. Production builds omit this.
spike0a = []
