[package]
name = "blissful-tv"
version = "0.1.0"
description = "Blissful for Android TV — Tauri v2 shell hosting the Blissful React UI"
authors = ["Blissful"]
edition = "2021"
rust-version = "1.77.2"

# Tauri mobile requires the app's Rust to compile as a shared/static library so
# the generated Android (Gradle/NDK) and iOS (Xcode) projects can link it. The
# desktop build still uses `main.rs` -> `blissful_tv_lib::run()`.
[lib]
name = "blissful_tv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
anyhow = "1"
tracing = "0.1"

# Async runtime for the localhost proxy (proxy.rs), the update check, and
# (later) the embedded streaming-server supervision.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "fs", "io-util"] }

# --- Same-origin proxy (faithful port of apps/blissful-shell/src/ui_server.rs) ---
# The React UI fetches relative paths (/addon-proxy, /storage/*, /stremio/*,
# /resolve-url, /tmdb-season-info). Under the Tauri WebView origin those have no
# server, so we re-serve them from a localhost listener on 127.0.0.1:11471 and
# point the UI's network base there on Android. reqwest uses rustls (no OpenSSL)
# so it cross-compiles cleanly to the Android NDK targets.
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
http-body-util = "0.1"
# `stream` enables Response::bytes_stream() so the /stream relay can forward the
# media body chunk-by-chunk (NOT buffer a 1.75 GB file in RAM on a 1.3 GB TV).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
# StreamExt::map to adapt reqwest's byte stream into a hyper StreamBody.
futures-util = "0.3"
url = "2"
urlencoding = "2"
once_cell = "1"

# Tauri release-profile recommendations (smaller, faster mobile binaries).
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
